feat: data-driven virtual keyboard layouts